      for operating as it did before and silencing the warning.

    * ->field() now checks its parameter count and wants a field name and a
      value to set the field to. Use ->value() to query the value of a field
      without setting it. This change to your scripts is mandatory because
      ->field() now uses a parameter declaration.

0.47 2020-04-08
    * Add ->transport() accessor to WWW::Mechanize::Chrome
      This currently just is ->driver->transport
    * Deprecate ->driver()
      You should use ->transport or ->target, depending on who you really
      want to talk to (GH issue #52)
    * Properly pass on events that get send before a click is generated and
      after that event. This allows automatically generating focus events
      when setting the value of an input field (GH issue #53).

0.46 2020-03-29
    * Actually make transferring the cookies from/to Chrome work
    * Add W:M:C:URLBlacklist to ease restricting what Chrome loads
    * Document the `headless` option to run Chrome without showing a window
      This option had been available a long time, but it only ever was
      mentioned in passing.

0.45 2020-03-28
    * The "secure" cookie attribute now gets forced into a JSON boolean
      in ->set_cookie. Thanks to Rub3nCT for reporting this in GH issue #53.
    * Added ->load_jar method to import a complete HTTP::Cookies cookie jar
      into Chrome, suggested by Rub3nCT in GH issue #53.

0.44 2020-01-03
    * Fix ->get_attribute('innerHTML') and ->get_attribute('outerHTML')
      being broken in 0.42. Also add a test for that functionality. GH #48.
    * Test suite stability

0.43 2019-12-26
    * Fix number of tests skipped on test skipping
    * Fix (and add a test for) ->text() method. This addresses RT #130999,
      test provided by Chris Denley.

0.42 2019-12-23
    * ->find_link() now uses the text() attribute, not the innerHTML. This means
      that for example text_regex searches can't match HTML in link texts anymore.